--- a/app/views/template/onSideMenu.scala.html
+++ b/app/views/template/onSideMenu.scala.html
@@ -14,7 +14,7 @@
 			<tr><td><input type="button" value="カード作成"  style="background-image: url('@routes.Assets.versioned("images/hito.png")');  background-repeat:no-repeat;" id="button_submit"><br></td></tr>
 			<tr><td><input type="button" value="掲示板"  style="background-image: url('@routes.Assets.versioned("images/bbs.png")');  background-repeat:no-repeat;" id="button_submit"><br></td></tr>
 	        <tr><td><input type="button" value="受信箱"  style="background-image: url('@routes.Assets.versioned("images/mail.png")');  background-repeat:no-repeat;" id="button_submit"><br></td></tr>
-	        <tr><td><input type="button" value="送信箱"  style="background-image: url('@routes.Assets.versioned("images/mail.png")');  background-repeat:no-repeat;" id="button_submit"><br></td></tr>
+	        <tr><td><input type="button" value="送信箱"  style="background-image: url('@routes.Assets.versioned("images/mailr.png")');  background-repeat:no-repeat;" id="button_submit"><br></td></tr>
 	        <tr><td><input type="button" value="検索"  style="background-image: url('@routes.Assets.versioned("images/search.png")');  background-repeat:no-repeat;" id="button_submit"><br></td></tr>
 			<tr><td><input type="button" value="事例の選択"  style="background-image: url('@routes.Assets.versioned("images/sentaku.png")');  background-repeat:no-repeat;" id="button_submit"><br></td></tr>
 			<tr><td><input type="button" value="査定"  style="background-image: url('@routes.Assets.versioned("images/satei.png")');  background-repeat:no-repeat;" id="button_submit"><br></td></tr>
@@ -24,9 +24,11 @@
 	 </table>
       </div>
 	</nav>
+
 	<div =id"section_box">
 		<section>
 			@content
 		</section>
 	</div>
+
 }
