リセット追加2

--- a/app/views/kanri.scala.html
+++ b/app/views/kanri.scala.html
@@ -13,16 +13,23 @@
 
 
 
+                   <Div Align="center">
 
-
-                         <p><label for="name">変更する人物</label>	部署
+                         <p><label for="name">変更する人物</label>　　　　　　　部署
                          <select name="sel_bunruiA" onChange="selectBunruiA(this)">
                          <option value="">部署</option>
-                         </select> 名前
+                         </select>
+
+
+
+                       名前
                          <select name="sel_bunruiB" width="100px"><option value="">社員</option></select>
                          <input type ="hidden" name="search" value=""></input>
                          </form>
-                          <label for="name">変更部署選択</label><br><br>
+
+
+
+                         <label for="name">変更部署選択</label><br><br>
                            <select name="部署">
                          <option selected="スペース"></option>
                          @for( b <- busyo){
@@ -43,11 +50,12 @@
 
 
 
+                   <Div Align="right">
                      <input type="submit" id="submit" value="削除">
                      <input type="submit" id="submit" value="変更登録">
 
 
-
+                    </Div>
 
 
 
@@ -66,7 +74,6 @@
 
     //最初の分類リスト (分類Aリスト)を定義
     @for(dep <- Department.find.all()){
-
     var bunruiA = new Array("部署1","部署2","部署3","部署4","部署5","人事6");
     }
 
