--- a/public/stylesheets/ichiran.css
+++ b/public/stylesheets/ichiran.css
@@ -1,90 +1,66 @@
-th.sender_department{
-	margin: 0 auto;
 
-}
-th.sender{
-	margin: 0 auto;
-}
-th.receiver_department{
-	margin: 0 auto;
-}
-th.receiver{
-	margin: 0 auto;
-}
-th.date{
-	margin: 0 auto;
-}
-th.card_title
-width:	290px;
-	text-align: center;
-}
 th.category{
-
-	 padding :0px 17px 0px 0px;
+padding :0px 17px 0px 0px;
 }
 th.search{
-	 padding :0px 1.6% 0px 0px;
+padding :0px 1.6% 0px 0px;
 }
 .sender_department{
-	width:120px;
+width:120px;
 text-align: center;
 }
 .sender{
-	text-align: center;
-	width:100px;
+text-align: center;
+width:100px;
 }
 .receiver_department{
-	text-align: center;
-	width:120px;
-
+text-align: center;
+width:120px;
 }
 .receiver{
-	width:100px;
+width:100px;
 text-align: center;
 }
 .date{
-	width:120px;
+width:120px;
 text-align: center;
 }
 .card_title{
-
-	width:	300px;
+width:	300px;
 text-align: center;
-
 }
 .category{
-	width:80px;
+width:80px;
 text-align: center;
 }
 .ichiran_width{
-	width: 95%;
-	margin: 0 auto;
+width: 95%;
+margin: 0 auto;
 }
 table.ichiran_index{
-
 width:100%;
 }
 .ichiran_table{
 width:100%;
 }
 .ichiran_value{
-	text-align: left;
+text-align:left;
 }
 .ichiran_contents{
-	height:300px; background-color:#eeeeee; overflow-y:scroll;
-	margin: 0 auto;
+height:300px; background-color:#eeeeee; overflow-y:scroll;
+margin: 0 auto;
 }
 .syousai_contents{
-	height:200px;background-color:#eeeeee; overflow:scroll;
-	margin: 0 auto;
+height:200px;background-color:#eeeeee; overflow:scroll;
+margin: 0 auto;
 }
 .select_date{
-	margin: 0 auto;
+margin: 0 auto;
 }
 iframe{
-	width:600px; height:300px;
-	margin: 0 auto;
-	text-align: cneter;
+width:600px; height:300px;
+margin: 0 auto;
+text-align: cneter;
 }
 
 
@@ -93,9 +69,9 @@ text-align: cneter; overflow: hidden;
 }
 /*角の丸い線*/
 .line{
-
- margin-left: auto;
- margin-right: auto;
+border: solid 3px #808080;
+margin-left: auto;
+margin-right: auto;
 -webkit-border-radius: 5px;
 -moz-border-radius:5px;
 border-radius:5px;
@@ -107,4 +83,9 @@ boder:none;
 border-collapse: collapse;
 border-spacing: 0;
 }
-
+/*表の色を1行ごとに変える*/
+.ichiran_table tr:nth-of-type(odd) td{background-color:#8eb4d9;border: 2px }
+.ichiran_table tr:nth-of-type(even) td{background-color:#487ca3;border: 2px }
+/*詳細ボタンがマウスオーバー&押された時*/
+.ichiran_table input:focus{background-color:#c0c0c0;}
+.ichiran_table input:hover{background-color:#c0c0c0;}
