--- a/public/stylesheets/sideMenu.css
+++ b/public/stylesheets/sideMenu.css
@@ -1,16 +1,15 @@
 body{
 font-family: Verdana,Helvetica, arial, sans-serif;
-height:99%;
+height : 99%;
 }
 html {
-height:98%;
+height: 98%;
 }
 nav {
-float:left;
-text-align:left;
-width:20%;
-height:100%;
-background-color:/*#004679*/;
+float : left;
+ext-align :left;
+width : 20%;
+height : 100%;
 }
 #section_box{
 width: 80%;
@@ -26,20 +25,23 @@ width:100%;
 height:100%
 }
 #button-box input#button_submit {
-font-size:25px;
-border-style:none;
-height:100%;
+font-size: 20px;
+border-style: none;
+height :100%;
 width:100%;
+background:#8eb4d9;
+color:#ffffff;
 text-decoration:none;
 margin: 0 auto;
-background-position:left;
+background-position: left ;
 }
 #button-box input#button_submit:hover{
-font-size:35px;
-font-weight:bold;
+font-size:25px:
+font-weight:bold ;
 text-decoration:none;
-height:100%;
-background-position:left;
+background:#487ca3;
+height :100%;
+background-position: left ;
 }
 .sidemenu-table{
 width:100%;
