--- a/app/views/typical.scala.html
+++ b/app/views/typical.scala.html
@@ -1,162 +1,16 @@
-@(gc : Gratitude_Card ,cs : CaseStudy)
-
-@busyo = @{models.Department.find.all}
-@cat = @{models.Category.find.all}
-
+@(gc : List[Gratitude_Card])(par : String)(pos : Map[String,Array[String]])
 @import views.html.template._
+@cat = @{models.Category.find.all}
+@emp = @{models.Employees.find.all}
 
 @onSideMenu("代表的な事例の選択")(""){
+
+	<link rel="stylesheet" href="@routes.Assets.versioned("/stylesheets/bbs.css")">
+
 	}{
-	@cs.gc.get(0).card_title <br>
-	@gc.category_id.gc.get(0).sender_id.name
+	<h2>代表的な事例の選択</h2>
+	<div class= "ichiran_width">
+
+	<form name="selectForm" action="@routes.TestController.test2Post()" method="POST">
+		@ichiran(gc)(par)("日付範囲" :: "送信部署" :: "受信部署" :: "カテゴリ" :: "日付" :: "タイトル" :: "ピックアップ":: Nil)(pos)
 	}
-
-	<section>
-
-		<h2>代表的な事例の選択</h2>
-		<form name="selection" align="center">
-
-	<table border = "0" align="center">
-		<tr>
-			<td></td>
-			<td>送信部署</td>
-			<td>受信部署</td>
-			<td>日付　</td>
-			<td></td>
-			<td></td>
-			<td>カテゴリ</td>
-			<td>選択</td>
-		</tr>
-
-		<tr>
-			<td>検索 ： </td>
-		<!-- 送信部署 -->
-			<td>
-				<select name="select">
-					<option value="category">-- 送信部署 --
-					@for(b <- busyo){
-						<option> @b.department_name </option>
-					}
-				</select>
-			</td>
-		<!-- 受信部署 -->
-			<td>
-				<select name="select">
-					<option value="category">-- 受信部署 --
-					@for(b <- busyo){
-						<option> @b.department_name </option>
-					}
-				</select>
-			</td>
-		<!-- 日付 -->
-			<td>
-				<select name="start">
-					<option value="day_start">-- 開始日 --
-					<option value="day">2016年4月1日
-					<td>～</td>
-				</select>
-			</td>
-
-			<td>
-				<select name="end">
-					<option value="day_end">-- 終了日 --
-					<option value="day2">2016年5月31日
-			</td>
-		<!-- カテゴリ -->
-			<td>
-				<select name="select">
-					<option value="category">-- カテゴリ --
-					 @for(ct <- cat){
-                         	<option > @ct.category_name </option>
-                         }
-				</select>
-			</td>
-		<!-- 選択 -->
-			<td>
-				<select name="select">
-					<option value="category">全て
-				</select>
-			</td>
-		</tr>
-		</table>
-
-		<br>
-
-		<table border=1  height="200" width="700" bgcolor="#ccffcc" align="center" >
-		<tr>
-			<td>送信部署</td>
-			<td>受信部署</td>
-			<td>カテゴリ</td>
-			<td>日付</td>
-			<td>タイトル</td>
-			<td>選択</td>
-		</tr>
-		<tr>
-			<td>開発</td>
-			<td>技術支援</td>
-			<td>デバッグ</td>
-			<td>＃</td>
-			<td>デバッグの協力ありがとうございます。</td>
-			<td><input type="button" value="選択"onClick="OnOff(this);"></td>
-
-			<!-- 選択ボタンを押すと文字が解除になる -->
-			<script type="text/javascript">
-				<!--
-				function OnOff(lol){
-					if (lol.value == "選択") {
-						lol.value = "解除";
-					} else {
-						lol.value = "選択";
-					}
-				}
-				// -->
-			</script>
-
-		</tr>
-		<tr>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td><input type="button" value="選択"onClick="OnOff(this);"></td>
-
-		</tr>
-		<tr>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td><input type="button" value="選択"onClick="OnOff(this);"></td>
-
-		</tr>
-		<tr>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td><input type="button" value="選択"onClick="OnOff(this);"></td>
-
-		</tr>
-				<tr>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td><input type="button" value="選択"onClick="OnOff(this);"></td>
-
-		</tr>
-		</table>
-
-		<br>
-
-		<table border=1 height="200" width="700" bgcolor="#ccffcc"align="center"><tr><td>
-			　　　クリックしたら表示
-		</td></tr></table>
-
-
-	</section>
-
