--- a/app/views/template/onSideMenu.scala.html
+++ b/app/views/template/onSideMenu.scala.html
@@ -5,7 +5,9 @@
 <!-- 引数 タイトル,権限,ヘッダ追記内容,内容 -->
 @template(title){
 		@headH
-		<link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/sideMenu.css")">
+				<link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/sideMenu.css")">
+				<link rel="stylesheet" href="@routes.Assets.versioned("color_Blue.css")">
+
 
 	}{
 	<nav>
