--- a/app/views/kanri.scala.html
+++ b/app/views/kanri.scala.html
@@ -3,7 +3,7 @@
 @busyo = @{models.Department.find.all}
 @template("変更入力画面"){
 	}{
-
+		<link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/kanri.css")">
 
 <h1>変更入力画面</h1>
 
