査定view完成(内部処理未実装)

--- a/app/views/valuation.scala.html
+++ b/app/views/valuation.scala.html
@@ -1,165 +1,11 @@
-@(gc : Gratitude_Card ,cs : CaseStudy)
+@(emp : List[Employees])(par : String)(pos : Map[String,Array[String]])
 @import views.html.template._
 @import models._
 @busyo = @{models.Department.find.all}
 @emp = @{models.Employees.find.all}
 @onSideMenu("査定")(""){
+	<link rel="stylesheet" href="@routes.Assets.versioned("/stylesheets/ichiran.css")">
 	}{
-	@cs.gc.get(0).card_title <br>
-	@gc.category_id.gc.get(0).sender_id.name
-
-
-
 	<h2>査定</h2>
-
-	<form name="form1" method="get" onsubmit="gettext(this)">
-		<table border = "0" align="center">
-
-		<tr>
-			<td></td>
-			<td>　所属</td>
-			<td>　名前</td>
-			<td>　日付</td>
-		</tr>
-
-		<tr>
-			<td>検索 ： </td>
-
-		<!-- 所属 -->
-			<td><select name="sel_bunruiA" onChange="selectBunruiA(this)">
-			<option value="affiliation">-- 所属 --
-				@for(b <- busyo){
-				<option> @b.department_name </option>
-				}
-			</select>
-			</td>
-
-		<!-- 社員名 -->
-			<td>
-			<select name="sel_bunruiB">
-			<option value="employee">-- 社員名 --
-					 @for(em <- emp){
-					   	<option> @em.name </option>
-                      }
-
-			</select>
-
-		<!-- 日付（カレンダー表示） -->
-			<td><input type="date" name="date" placeholder="2016-01-01"></td>
-			<td>～</td>
-			<td><input type="date" name="date" placeholder="2016-01-01"></td>
-			<td>まで</td>
-		</tr>
-		</table>
-	 	<br>
-		<table border = "1" height="200" width="700" bgcolor="#ccffcc" align="center">
-		<tr>
-			<td>社員ID</td>
-			<td>所属</td>
-			<td>社員名</td>
-			<td>受信件数</td>
-		</tr>
-		<tr>
-			<td>1</td>
-			<td>開発</td>
-			<td>山田太郎</td>
-			<td>453</td>
-		</tr>
-		<tr>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-		</tr>
-		<tr>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-		</tr>
-		<tr>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-		</tr>
-				<tr>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-			<td>　　　　</td>
-		</tr>
-		</table>
-	</form>
-
-
-<!-- Javaスクリプト -->
-	<script type="text/javascript" language="JavaScript">
-
-    //最初の分類リスト (分類Aリスト)を定義
-    var bunruiA = new Array("部署1","部署2","部署3","部署4","部署5","人事6");
-
-    // 次の分類(分類Aごとの分類Bリスト)を定義
-    var bunruiB = new Array();
-
-    @for(dep <- Department.find.all()){
-
-    	bunruiB["@dep.department_name"]= new Array();
-    			@for(emp <- Employees.find.where().eq("department_id", dep).findList()){
-    				bunruiB["@dep.department_name"].push("@emp.name");
-    			}
-    }
-
-
-
-    // 分類Aの選択リストを作成
-    createSelection( form1.elements['sel_bunruiA'], "部署", bunruiA, bunruiA);
-
-    ////////////////////////////////////////////////////
-    //
-    // 選択ボックスに選択肢を追加する関数
-    //	引数: ( selectオブジェクト, value値, text値)
-    function addSelOption( selObj, myValue, myText )
-    {
-        selObj.length++;
-        selObj.options[ selObj.length - 1].value = myValue ;
-        selObj.options[ selObj.length - 1].text  = myText;
-
-    }
-    /////////////////////////////////////////////////////
-    //
-    //	選択リストを作る関数
-    //	引数: ( selectオブジェクト, 見出し, value値配列 , text値配列 )
-    //
-    function createSelection( selObj, midashi, aryValue, aryText )
-    {
-        selObj.length = 0;
-        addSelOption( selObj, midashi, midashi);
-        // 初期化
-        for( var i=0; i < aryValue.length; i++)
-        {
-            addSelOption ( selObj , aryValue[i], aryText[i]);
-        }
-    }
-    ///////////////////////////////////////////////////
-    //
-    // 	分類Aが選択されたときに呼び出される関数
-    //
-    function selectBunruiA(obj)
-    {
-        // 選択肢を動的に生成
-        createSelection(form1.elements['sel_bunruiB'], "社員",
-                bunruiB[obj.value], bunruiB[obj.value]);
-
-    }
-    /////////////////////////////////////////////////
-    // submit前の処理
-    function gettext(form){
-        var a = form1.sel_bunruiA.value;   // 分類1
-        var b = form1.sel_bunruiB.value;   // 分類2
-        // ANDでつなげる
-        form1.elements['search'].value = a+' AND '+b;
-        alert(form1.elements['search'].value );
-    }
-		</script>
-	}
+	@sateiT(emp)(par)(pos)
+}
