--- a/app/views/bbs.scala.html
+++ b/app/views/bbs.scala.html
@@ -13,7 +13,7 @@
 	<form id="selectForm" name="selectForm" action="@routes.HomeController.bbsPost" method="POST">
 		@par <br>
 
-		@ichiran(gc)(par)("日付" :: "カテゴリ" :: "送信部署" :: "送信者" ::"受信部署" :: "受信者" :: "タイトル" :: Nil)(pos)
+		@ichiran(gc)(par)("日付範囲":: "送信部署" :: "送信者" ::"受信部署" :: "受信者" :: "カテゴリ" :: "タイトル" ::"日付" :: Nil)(pos)
 
 
 	}
