--- a/app/views/mail/receive.scala.html
+++ b/app/views/mail/receive.scala.html
@@ -8,5 +8,5 @@
 	<div class= "ichiran_width">
 
 	<form name="selectForm" action="@routes.MailController.receive()" method="POST">
-		@ichiran(gc)(par)("送信部署" :: "送信者" :: "日付" :: "カテゴリ" :: "タイトル" :: Nil)(pos)
+		@ichiran(gc)(par)("日付範囲"::"送信部署" :: "送信者" :: "カテゴリ" :: "タイトル" :: "日付"  :: Nil)(pos)
 	}
