--- a/app/views/mail/receive.scala.html
+++ b/app/views/mail/receive.scala.html
@@ -3,7 +3,8 @@
 
 @onSideMenu("テスト")(""){
 	<link rel="stylesheet" href="@routes.Assets.versioned("/stylesheets/ichiran.css")" id="receive">
-
+<link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/sideReceive.css")">
+<link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/card_width.css")">
 	}{
 	<div class= "ichiran_width">
 
