--- a/app/views/mail/trans.scala.html
+++ b/app/views/mail/trans.scala.html
@@ -3,7 +3,7 @@
 
 @onSideMenu("テスト")(""){
 	<link rel="stylesheet" href="@routes.Assets.versioned("/stylesheets/ichiran.css")" id="tr">
-
+<link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/sideTrans.css")">
 	}{
 	<div class= "ichiran_width">
 
