--- a/app/views/template/ichiran.scala.html
+++ b/app/views/template/ichiran.scala.html
@@ -28,14 +28,15 @@
 			}
 		}
 		</div>
-		<table class= "ichiran_index">
+		<table class= "ihiran" border="1"><tr><td>
+		<table class= "ichiran_index" >
 			<tr>
 
 
 
 				@for(str <- show){
 					@if(str == SelectGC.name.get("sender_department")){
-						<th class="sender_department"><select name="sender_department" onChange="this.form.submit()" />
+						<td class="sender_department"><select name="sender_department" onChange="this.form.submit()" />
 						<option>@SelectGC.name.get("sender_department")</option>
 							@for(dep <- Department.find.all()){
 								@if(dep.department_name == post.get("sender_department")){
@@ -48,7 +49,7 @@
 
 					}
 					@if(str == SelectGC.name.get("receiver_department")){
-						<th class="receiver_department"><select name="receiver_department" onChange="this.form.submit()" />
+						<td class="receiver_department"><select name="receiver_department" onChange="this.form.submit()" />
 						<option>@SelectGC.name.get("receiver_department")</option>
 							@for(dep <- Department.find.all()){
 								@if(dep.department_name == post.get("receiver_department")){
@@ -60,7 +61,7 @@
 						</select></th>
 					}
 					@if(str == SelectGC.name.get("sender")){
-						<th class="sender"><select name="sender" onChange="this.form.submit()" />
+						<td class="sender"><select name="sender" onChange="this.form.submit()" />
 						<option>@SelectGC.name.get("sender")</option>
 
 						@for(dep <- Department.find.all()){
@@ -78,7 +79,7 @@
 						}
 					}
 					@if(str == SelectGC.name.get("receiver")){
-						<th class="receiver"><select name="receiver" onChange="this.form.submit()" />
+						<td class="receiver"><select name="receiver" onChange="this.form.submit()" />
 						<option>@SelectGC.name.get("receiver")</option>
 
 						@for(dep <- Department.find.all()){
@@ -96,13 +97,13 @@
 						}
 					}
 					@if(str == SelectGC.name.get("date")){
-						<th class="date">@SelectGC.name.get("date")</th>
+						<td class="date">@SelectGC.name.get("date")</th>
 					}
 					@if(str == SelectGC.name.get("title")){
-						<th class="card_title">@SelectGC.name.get("title")</th>
+						<td class="card_title">@SelectGC.name.get("title")</th>
 					}
 					@if(str== SelectGC.name.get("category")){
-						<th class="category" ><select name="category" onChange="this.form.submit()" />
+						<td class="category" ><select name="category" onChange="this.form.submit()" />
 						<option >@SelectGC.name.get("category")</option>
 							@for(cat <- Category.find.all()){
 								@if(cat.category_name == post.get("category")){
@@ -113,7 +114,7 @@
 							}
 					}
 					@if(str == "ピックアップ"){
-						<th class="pickup"><select name="pickup" onChange="this.form.submit()" />
+						<td class="pickup"><select name="pickup" onChange="this.form.submit()" />
 						<option>すべて</optiron>
 							@for(pick <- SelectGC.name.get("selected") :: Nil){ @{/*SelectGC.name.get("removed") */}
 								@if(pick == post.get("pickup")){
@@ -124,7 +125,7 @@
 							}
 					}
 				}
-			<th class="search"><input type="submit" value="更新" /></th>
+			<td class="search"><input type="submit" value="更新" /></td>
 
 			</tr>
 		</table>
@@ -133,7 +134,7 @@
 </div>
 <table class="line"></table>
 <div class="ichiran_contents ichiran_width">
-	<table class= ichiran_table>
+	<table class= ichiran_table align="center">
 		@for(i <- range){
 
 			<tr>
@@ -155,9 +156,9 @@
 					}else{@if(str=="ピックアップ"){
 						<td class="pickup">
 							@if(gc.get(i).cs.contains(nowCS)){
-								<button form="selectForm" type="submit" name="del_pickup" value="@gc.get(i).card_id" >解除</button>
+								<button form="selectForm" type="submit" name="del_pickup" value="@gc.get(i).card_id" class="pu">解除</button>
 							}else{
-								<button form="selectForm" type="submit" name="sel_pickup" value="@gc.get(i).card_id" >登録</button>
+								<button form="selectForm" type="submit" name="sel_pickup" value="@gc.get(i).card_id" class="pu">登録</button>
 							}
 						</td>
 
@@ -168,6 +169,9 @@
 			</tr>
 
 		}
+	</table>
+	</td>
+	</tr>
 	</table>
 </div>
 <br>
