現在のページに連動してサイドメニューの色が変わるように変更（ページ自体ができていないものがあるので途中まで）

--- a/app/views/mail/trans.scala.html
+++ b/app/views/mail/trans.scala.html
@@ -2,8 +2,9 @@
 @import views.html.template._
 
 @onSideMenu("テスト")(""){
-	<link rel="stylesheet" href="@routes.Assets.versioned("/stylesheets/ichiran.css")" id="tr">
+<link rel="stylesheet" href="@routes.Assets.versioned("/stylesheets/ichiran.css")" id="tr">
 <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/sideTrans.css")">
+<link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/card_width.css")">
 	}{
 	<div class= "ichiran_width">
 
