--- a/app/views/typical.scala.html
+++ b/app/views/typical.scala.html
@@ -7,6 +7,7 @@
 
 @onSideMenu("代表的な事例の選択")(""){
 	<link rel="stylesheet" href="@routes.Assets.versioned("/stylesheets/ichiran.css")">
+	<link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/sideTypical.css")">
 	}{
 			<h2>代表的な事例の選択</h2>
 	<div class= "ichiran_width">
