--- a/app/views/valuation.scala.html
+++ b/app/views/valuation.scala.html
@@ -7,7 +7,7 @@
 	}{
 	@cs.gc.get(0).card_title <br>
 	@gc.category_id.gc.get(0).sender_id.name
-
+	<link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/sideValuation.css")">
 
 
 
