カード画面表示の微調整

--- a/app/views/template/ichiran.scala.html
+++ b/app/views/template/ichiran.scala.html
@@ -28,7 +28,7 @@
 			}
 		}
 		</div>
-		<table class= "ihiran" border="1"><tr><td>
+		<table class= "ihiran"><tr><td>
 		<table class= "ichiran_index" >
 			<tr>
 
