--- a/public/stylesheets/sideTypical.css
+++ b/public/stylesheets/sideTypical.css
@@ -10,3 +10,25 @@ text-decoration:none;
 margin: 0 auto;
 background-position:left;
 }
+
+td.sender_department{
+width:15%;
+
+}
+
+td.receiver_department{
+width:15%;
+}
+
+td.date{
+width:15%;
+}
+td.card_title{
+width:50%;
+}
+td.category{
+width:15%;
+}
+td.search{
+	width:10%;
+}
