暫定措置として、更新ボタンを削除

--- a/app/views/template/ichiran.scala.html
+++ b/app/views/template/ichiran.scala.html
@@ -127,7 +127,7 @@
 						</th>
 					}
 				}
-			<th class="search"><input type="submit" value="更新" /></th>
+			<th class="search"><!--<input type="submit" value="更新" />--></th>
 
 			</tr>
 		</table>
