sessionで絞込み、ページの表示制限。

--- a/app/views/authentication/adindex.scala.html
+++ b/app/views/authentication/adindex.scala.html
@@ -28,6 +28,6 @@
         <input type="submit"value="Login">
         }
         </div>
-
+	  <input type="button" onclick="location.href='login'"value="戻る"style="WIDTH: 100px; HEIGHT: 40px; cursor:pointer;">
     </body>
 </html>
