ピックアップ画面完成

--- a/app/views/template/onSideMenu.scala.html
+++ b/app/views/template/onSideMenu.scala.html
@@ -22,7 +22,7 @@
 
 	<tr><td><input type="button" value="事例の選択"   style="background-image: url('@routes.Assets.versioned("images/sentaku.png")');   background-repeat:no-repeat;" id="button_submit" onClick="location.href='@routes.HomeController.typical()'"class="sentaku"><br></td></tr>
 	<tr><td><input type="button" value="査定"         style="background-image: url('@routes.Assets.versioned("images/satei.png")');     background-repeat:no-repeat;" id="button_submit" onClick="location.href='@routes.HomeController.valuation()'"class="valuation"><br></td></tr>
-	<tr><td><input type="button" value="ピックアップ" style="background-image: url('@routes.Assets.versioned("images/good.png")');      background-repeat:no-repeat;" id="button_submit" onClick="location.href='@routes.HomeController.typical()'"class="good"><br></td></tr>
+	<tr><td><input type="button" value="ピックアップ" style="background-image: url('@routes.Assets.versioned("images/good.png")');      background-repeat:no-repeat;" id="button_submit" onClick="location.href='@routes.PickController.pickup()'"class="good"><br></td></tr>
 	<tr><td><input type="button" value="経営委掲示板" style="background-image: url('@routes.Assets.versioned("images/bbs_detail.png")');background-repeat:no-repeat;" id="button_submit"class="bbs_derail"><br></td></tr>
 	<tr><td><input type="button" value="ログアウト"   style="background-image: url('@routes.Assets.versioned("images/logout.png")');    background-repeat:no-repeat;" id="button_submit" onClick="location.href='@routes.AuthController.logout'"class="logout"><br></td></tr>
 
