現在いるページをサイドメニューの色を変えることで表現、サイドメニューから経営掲示板を削除

--- a/app/views/valuation.scala.html
+++ b/app/views/valuation.scala.html
@@ -4,6 +4,7 @@
 @busyo = @{models.Department.find.all}
 @onSideMenu("査定")(""){
 	<link rel="stylesheet" href="@routes.Assets.versioned("/stylesheets/ichiran.css")">
+		<link rel="stylesheet" href="@routes.Assets.versioned("/stylesheets/sidevaluation.css")">
 	<script type="text/javascript">
 		function open_detailed(f) {
 			f.target="detaild";
