エラーページデザイン

--- a/app/views/parerr.scala.html
+++ b/app/views/parerr.scala.html
@@ -1,6 +1,7 @@
 
 <HTML><HEAD><TITLE>File Not Found !</TITLE>
 		<link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/error.css")">
+
 <style>
 <!--
 
@@ -13,11 +14,11 @@
 	<h1>ERROR 403 <br>　　　　Forbidden!</h1>
 	<h4>申し訳ございません。</h4>
 	<h2>このページへのアクセスは<div class="red">禁止</div>されています。</h2>
-	<h3>権限でログインし直す場合は下記からログアウトしてください</h3>
+	<h3>ログアウトして権限を持ったアカウントで入りなおすか<br>前のページにお戻りください。</h3>
 
 	<ul>
 				<li><a href="/logout">ログアウト</a></li>
-				<li><a href="javascript:history.back()">[戻る]</a></li>
+				<li><a href="javascript:history.back()">戻る</a></li>
 
 	</ul>
 
